--- a/config.yml
+++ b/config.yml
@@ -25,8 +25,7 @@ menu:
           weight: 4
 
 params:
-    description: "I am a Professor of Subject at the University of Place. My research covers various topics.
-consequat."
+    description: "YABO YABO YABO YAAAAAABO"
     author: Name
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
@@ -50,7 +49,7 @@ consequat."
     math: true
     profileMode:
           enabled: true
-          title: Prof. Namely Name
+          title: Bro Angelo
           subtitle: "I am a Professor of Subject at the University of Place. I work on various topics. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
           imageUrl: "picture.jpeg"
           imageWidth: 160
