--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ menu:
           weight: 4
 
 params:
-    description: "YABO YABO YABO YAAAAAABO"
+    description: ""
     author: Name
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
@@ -49,8 +49,8 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Bro Angelo
-          subtitle: "I am a Professor of Subject at the University of Place. I work on various topics. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+          title: Bro
+          subtitle: "YABO YABO YAAAABO"
           imageUrl: "picture.jpeg"
           imageWidth: 160
           imageHeight: 160
