--- a/config.yml
+++ b/config.yml
@@ -11,8 +11,8 @@ taxonomies:
 
 menu:
     main:
-        - name: Research
-          url: research/
+        - name: Papers
+          url: papers/
           weight: 1
         - name: Courses
           url: courses/
@@ -51,42 +51,42 @@ params:
           enabled: true
           title: Bro
           subtitle: "YABO YABO YAAAABO"
-          imageUrl: "picture.jpeg"
+          imageUrl: "profile_photo.jpg"
           imageWidth: 160
           imageHeight: 160
           imageTitle: Prof. Name
           buttons:
             - name: Papers
               url: papers/
-            - name: Courses
-              url: courses/
-            - name: Data
-              url: data/
-            - name: Newsletter
-              url: https://pmichaillat.substack.com
-            - name: Tags
-              url: tags/
-            - name: Archive
-              url: archive/
+            # - name: Courses
+            #   url: courses/
+            # - name: Data
+            #   url: data/
+            # - name: Newsletter
+            #   url: https://pmichaillat.substack.com
+            # - name: Tags
+              # url: tags/
+            # - name: Archive
+            #   url: archive/
     socialIcons:
         - name: CV
-          url: cv.pdf
+          url: angelosantos_cv.pdf
         - name: Email
-          url: mailto:pascal.michaillat@gmail.com
+          url: mailto:afdossan@cougarnet.uh.edu
         - name: Location
           url: location/
         - name: Office Hours
           url: officehours/
-        - name: Google Scholar
-          url: https://scholar.google.com/citations?user=cL23w-4AAAAJ
-        - name: YouTube
-          url: https://www.youtube.com/@pmichaillat
+        # - name: Google Scholar
+        #   url: https://scholar.google.com/citations?user=cL23w-4AAAAJ
+        # - name: YouTube
+        #   url: https://www.youtube.com/@pmichaillat
         - name: GitHub
-          url: https://github.com/pmichaillat
-        - name: Substack
-          url: https://pmichaillat.substack.com
-        - name: Twitter
-          url: https://twitter.com/pmichaillat
+          url: https://github.com/AngeloSant0s
+        # - name: Substack
+        #   url: https://pmichaillat.substack.com
+        # - name: Twitter
+        #   url: https://twitter.com/pmichaillat
 
     assets:
         disableHLJS: true
@@ -95,7 +95,7 @@ params:
         hiddenInList: false
         hiddenInSingle: true
     label:
-      text: "Prof. Name"
+      text: "Angelo Santos"
       icon: favicon.ico
       iconHeight: 18
 
