--- a/config.yml
+++ b/config.yml
@@ -50,7 +50,7 @@ params:
     profileMode:
           enabled: true
           title: Angelo Santos
-          subtitle: ""
+          subtitle: "Hello! I am a PhD candidate at the University of Houston. My interest are development, education and health. In my current research, I analyze the impacts of a special education policy in Brazil. I am also a python and soccer lover!"
           imageUrl: "profile_photo.jpg"
           imageWidth: 240
           imageHeight: 160
