--- a/config.yml
+++ b/config.yml
@@ -51,7 +51,7 @@ params:
           enabled: true
           title: Angelo Santos
           subtitle: "Hello! I am a PhD candidate at the University of Houston. My interest are development, education and health. In my current research, I analyze the impacts of a special education policy in Brazil. I am also a python and soccer lover!"
-          imageUrl: "profile_square.png"
+          imageUrl: "profile_square.jpg"
           imageWidth: 160
           imageHeight: 160
           imageTitle: Angelo Santos
