--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://angelosantos.github.io/" 
+baseURL: "https://angelosant0s.github.io/" 
 title: Angelo Santos 
 paginate: 20
 theme: PaperMod
