--- a/config.yml
+++ b/config.yml
@@ -106,7 +106,7 @@ params:
         # - name: YouTube
         #   url: https://www.youtube.com/@pmichaillat
         - name: GitHub
-          url: https://github.com/AngeloSant0s
+          url: https://github.com/angelofgdsantos
         # - name: Substack
         #   url: https://pmichaillat.substack.com
         # - name: Twitter
